# clebarr

./: .env copy.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
app/: config.py  logging.py  main.py  models.py
app/routers/: server.py
app/services/: plex.py
config/: config.template.yaml
tests/: config.yaml  conftest.py
tests/config/: config.yaml
tests/unit/: test_libraries.py  test_main.py  test_models.py  test_server_router.py
